Load SCP-294 drinks from config JSON